@@ -149,7 +149,7 @@ public class FileChooseWindow extends ChooseWindow {
 			e.printStackTrace();
 		}
 		if (this.indexList.contains(index))
-			this.indexList.remove(new Integer(index));
+			this.indexList.remove(Integer.valueOf(index));
 		else
 			this.indexList.add(index);
 
